--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ gaduhistory (0.5-1) unstable; urgency=low
   * New upstream release.
     - fixes non-utf8 locale support (Closes: #647638)
     - fixes custom timestamp support
+  * Bumped standards-version to 3.9.2 (no change needed).
 
- -- Marcin Owsiany <porridge@debian.org>  Sat, 12 Nov 2011 13:50:37 +0000
+ -- Marcin Owsiany <porridge@debian.org>  Sat, 12 Nov 2011 15:35:35 +0000
 
 gaduhistory (0.4+1-1) unstable; urgency=low
 
