--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gaduhistory (0.5-2) unstable; urgency=low
+
+  * [61191a9] Depend on and use python (>=2.6), not python2.6. (Closes: #644306)
+
+ -- Marcin Owsiany <porridge@debian.org>  Sat, 12 Nov 2011 16:03:28 +0000
+
 gaduhistory (0.5-1) unstable; urgency=low
 
   * New upstream release.
