--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+gaduhistory (0.5-3) unstable; urgency=low
+
+  [ Andrea Colangelo ]
+  * [78f8f49] Convert to dh_python2. (Closes: #708892)
+
+  [ Marcin Owsiany ]
+  * [20067cc] Update homepage and debian/watch.
+  * [19fe407] Mention debian branch in Vcs-Git header.
+  * [dcd74b2] Bump standards-version.
+
+ -- Marcin Owsiany <porridge@debian.org>  Wed, 14 May 2014 20:39:29 +0200
+
 gaduhistory (0.5-2) unstable; urgency=low
 
   * [61191a9] Depend on and use python (>=2.6), not python2.6. (Closes: #644306)
